objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Default Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Age__c</fullName>
        <description>The age that comes with the import. Maybe we can add data here if we gather it.</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bad_Phone_Numbers__c</fullName>
        <label>Bad Phone Numbers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>000-000-0000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Description_Log__c</fullName>
        <description>Put the important details from a call here.</description>
        <label>Call Description Log</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Calls_Made_to_Mobile__c</fullName>
        <label>Calls Made to Mobile</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls_Made_to_Phone__c</fullName>
        <label>Calls Made to Phone</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County of their primary residence.</description>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adams</fullName>
                </value>
                <value>
                    <fullName>Antelope</fullName>
                </value>
                <value>
                    <fullName>Arthur</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Blaine</fullName>
                </value>
                <value>
                    <fullName>Boone</fullName>
                </value>
                <value>
                    <fullName>Box Butte</fullName>
                </value>
                <value>
                    <fullName>Boyd</fullName>
                </value>
                <value>
                    <fullName>Burt</fullName>
                </value>
                <value>
                    <fullName>Butler</fullName>
                </value>
                <value>
                    <fullName>Cass</fullName>
                </value>
                <value>
                    <fullName>Cedar</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>Cherry</fullName>
                </value>
                <value>
                    <fullName>Cheyenne</fullName>
                </value>
                <value>
                    <fullName>Clay</fullName>
                </value>
                <value>
                    <fullName>Colfax</fullName>
                </value>
                <value>
                    <fullName>Cuming</fullName>
                </value>
                <value>
                    <fullName>Custer</fullName>
                </value>
                <value>
                    <fullName>Dakota</fullName>
                </value>
                <value>
                    <fullName>Dawes</fullName>
                </value>
                <value>
                    <fullName>Dawson</fullName>
                </value>
                <value>
                    <fullName>Dixon</fullName>
                </value>
                <value>
                    <fullName>Dodge</fullName>
                </value>
                <value>
                    <fullName>Douglas</fullName>
                </value>
                <value>
                    <fullName>Dundy</fullName>
                </value>
                <value>
                    <fullName>Fillmore</fullName>
                </value>
                <value>
                    <fullName>Franklin</fullName>
                </value>
                <value>
                    <fullName>Frontier</fullName>
                </value>
                <value>
                    <fullName>Furnas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <description>Probably not getting edited.</description>
        <label>Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>499 &amp; Less</fullName>
                </value>
                <value>
                    <fullName>500-549</fullName>
                </value>
                <value>
                    <fullName>550-599</fullName>
                </value>
                <value>
                    <fullName>600-649</fullName>
                </value>
                <value>
                    <fullName>650-699</fullName>
                </value>
                <value>
                    <fullName>700-749</fullName>
                </value>
                <value>
                    <fullName>750-799</fullName>
                </value>
                <value>
                    <fullName>800+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Call_Back__c</fullName>
        <description>Follow up date</description>
        <label>Date to Call Back</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9C2CCampaignName__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Open&quot;),&quot;Outbound - Cold Calling&quot;,

    IF(ISPICKVAL(Status,&quot;Assigned&quot;),&quot;OB-&quot;&amp; $User.FirstName &amp; &quot; &quot; &amp; $User.LastName,

        IF(ISPICKVAL(Status,&quot;Working&quot;),&quot;OB-&quot;&amp; $User.FirstName &amp; &quot; &quot; &amp; $User.LastName,

            IF(ISPICKVAL(Status,&quot;Nurturing&quot;),&quot;OB-&quot;&amp; $User.FirstName &amp; &quot; &quot; &amp; $User.LastName,

                IF(ISPICKVAL(Status,&quot;Converted&quot;),&quot;Outbound - Confirmation&quot;,&quot;&quot;
                    )
                )
            )
        )
    )</formula>
        <label>Five9C2CCampaignName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flagged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox for people to flag a record and alert Admins. Will disable any calling lists.</description>
        <label>Flagged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under $10K</fullName>
                </value>
                <value>
                    <fullName>10-14,999</fullName>
                </value>
                <value>
                    <fullName>15-19,999</fullName>
                </value>
                <value>
                    <fullName>20-24,999</fullName>
                </value>
                <value>
                    <fullName>25-29,999</fullName>
                </value>
                <value>
                    <fullName>30-34,999</fullName>
                </value>
                <value>
                    <fullName>35-39,999</fullName>
                </value>
                <value>
                    <fullName>40-44,999</fullName>
                </value>
                <value>
                    <fullName>45-49,999</fullName>
                </value>
                <value>
                    <fullName>50-54,999</fullName>
                </value>
                <value>
                    <fullName>55-59,999</fullName>
                </value>
                <value>
                    <fullName>60-64,999</fullName>
                </value>
                <value>
                    <fullName>65-74,999</fullName>
                </value>
                <value>
                    <fullName>75-99,999</fullName>
                </value>
                <value>
                    <fullName>100-149,000</fullName>
                </value>
                <value>
                    <fullName>150-174,999</fullName>
                </value>
                <value>
                    <fullName>175-199,999</fullName>
                </value>
                <value>
                    <fullName>200-249,000</fullName>
                </value>
                <value>
                    <fullName>250,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Disposition__c</fullName>
        <label>Lead Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DNC</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Renter</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Out of Territory</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Do</fullName>
                </value>
                <value>
                    <fullName>Competitor Preference</fullName>
                </value>
                <value>
                    <fullName>New Windows</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Non Responder</fullName>
                </value>
                <value>
                    <fullName>General No Interest</fullName>
                </value>
                <value>
                    <fullName>Purchased Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Language Barrier</fullName>
                </value>
                <value>
                    <fullName>Call to Re/Set</fullName>
                </value>
                <value>
                    <fullName>Visit Re/Set</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                    <default>true</default>
                    <label>Residential</label>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Organizational</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Residence__c</fullName>
        <label>Length of Residence</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_Only_Address__c</fullName>
        <label>Mailing Only Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Status__c</fullName>
        <label>Mobile Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phone_Number_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Lead_Source__c</fullName>
        <description>The provider i.e. &quot;Cole Neighborhoods&quot;</description>
        <inlineHelpText>The provider i.e. &quot;Cole Neighborhoods&quot; or the event&apos;s name.</inlineHelpText>
        <label>Name of Lead Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <label>Net Worth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $1</fullName>
                </value>
                <value>
                    <fullName>$1 - $4,999</fullName>
                </value>
                <value>
                    <fullName>$5,000 - $9,999</fullName>
                </value>
                <value>
                    <fullName>$10,000 - $24,999</fullName>
                </value>
                <value>
                    <fullName>$25,000 - $49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $249,999</fullName>
                </value>
                <value>
                    <fullName>$250,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>Greater than $499,999</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Phone_Status__c</fullName>
        <label>Other Phone Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phone_Number_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Phone_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Phone Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phone Number Lookup</label>
        <referenceTo>Phonenumber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Status__c</fullName>
        <label>Phone Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phone_Number_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Mortgage_Amount__c</fullName>
        <label>Second Mortgage Amount</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryContactFirstName__c</fullName>
        <label>Secondary Contact First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Last_Name__c</fullName>
        <label>Secondary Contact Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Mobile__c</fullName>
        <inlineHelpText>It let&apos;s us give a future secondary contact a mobile phone to themselves</inlineHelpText>
        <label>Secondary Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Just on NE counties for now. When KS and SD get added I&apos;ll pop those in too. I&apos;ll also verify counties later by zipcode or something.</description>
        <formula>&quot;Central Standard Time&quot;</formula>
        <inlineHelpText>Just on NE counties for now. When KS and SD get added I&apos;ll pop those in too. I&apos;ll also verify counties later by zipcode or something.</inlineHelpText>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>b7ef8429_9f35_4102_b1ea_44d3453a5086__c</fullName>
        <description>ANI Identifier assigned by Outbound ANI</description>
        <label>b7ef8429-9f35-4102-b1ea-44d3453a5086</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba685ce4_2c28_433a_a4c6_cac18b40f436__c</fullName>
        <description>ANI assigned to the lead by Outbound ANI</description>
        <label>ba685ce4-2c28-433a-a4c6-cac18b40f436</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__ProjectID__c</fullName>
        <label>CompanyCam Project ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Web2Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Web2Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For processing PVCs in the lead channel</description>
        <inlineHelpText>For processing PVCs in the lead channel</inlineHelpText>
        <label>isCustomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__AddressStatus__c</fullName>
        <label>Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__CountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__LocationAccuracy__c</fullName>
        <label>Location Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__LocationSource__c</fullName>
        <label>Location Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__StateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip/Postal Code Lookup</label>
        <referenceTo>pw_cc__ZipCode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>recordval__rv2AddressStatusCode__c</fullName>
        <label>RV Address Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2EmailStatusCode__c</fullName>
        <label>RV Email Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2FaxStatusCode__c</fullName>
        <label>RV Fax Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2MobilePhoneStatusCode__c</fullName>
        <label>RV Mobile Phone Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2PhoneStatusCode__c</fullName>
        <label>RV Phone Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2Status__c</fullName>
        <label>RV Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>recordval__RV2RecordStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>recordval__rv2Validation__c</fullName>
        <label>RV Validation Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Lead_Disposition__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.ENGAGEMENT_MAP</columns>
        <columns>LAST_CALL_DATE</columns>
        <columns>ACTION_CADENCE</columns>
        <columns>ACTION_CADENCE_ASSIGNEE</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified,Nurturing</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Default</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Everything</filterScope>
        <label>Assigned Leads</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cold_Calling_Lists</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Cold Calling Lists</label>
    </listViews>
    <listViews>
        <fullName>Flagged_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Flagged Leads</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAppointments</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>LEAD.COMPANY</columns>
        <columns>County__c</columns>
        <columns>isCustomer__c</columns>
        <columns>Name_of_Lead_Source__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FIRST_CALL_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Appointments</label>
        <sharedTo>
            <roleAndSubordinates>SDR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCallHistory</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified,Assigned,Working,Qualified</value>
        </filters>
        <filters>
            <field>Lead_Disposition__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Calls_Made_to_Mobile__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Calls_Made_to_Phone__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>My Call History</label>
        <queue>Open_Leads</queue>
        <sharedTo>
            <roleAndSubordinates>Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Unqualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Unqualified Leads</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Needs_to_be_called</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Working</value>
        </filters>
        <label>Needs to be called</label>
        <sharedTo>
            <role>Marketing_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Raw_Leads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>Open Leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Engagement_List_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACTION_CADENCE</columns>
        <columns>ACTION_CADENCE_ASSIGNEE</columns>
        <columns>SCHEDULED_RESUME_DATE_TIME</columns>
        <columns>ACTION_CADENCE_STATE</columns>
        <columns>LEAD.ENGAGEMENT_MAP</columns>
        <columns>FIRST_EMAIL_DATE</columns>
        <columns>FIRST_CALL_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.EMAIL_BOUNCED_REASON</columns>
        <columns>LEAD.EMAIL_BOUNCED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>Sales Engagement List View</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Call_Backs</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Working,Nurturing</value>
        </filters>
        <label>Future Call Backs</label>
        <sharedTo>
            <roleAndSubordinates>Marketing_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>